Autoscroll works after direction change on a fully scrolled element.

Without this fix autoscrolling would not work if you start a middle
click autoscroll on a page, wait for it to fully scroll and then
move the mouse to change the direction of the autoscrolling.

The fix excludes GSUs with autoscroll source from overscroll handling
logic.

Bug: 870726
Test: AutoscrollBrowserTest.AutoscrollDirectionChangeAfterFullyScrolled
Change-Id: Ib54abf6b7e0fb1fbeab46b0bc93e9aec4d708029
Reviewed-on: https://chromium-review.googlesource.com/1162268
Reviewed-by: Timothy Dresser <tdresser@chromium.org>
Reviewed-by: Dave Tapuska <dtapuska@chromium.org>
Commit-Queue: Sahel Sharify <sahel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#591729}
Former-commit-id: bdaa29eb9df18cdd6c9b9819dd0438b0eb1deef9